docs(api): password reset
