# public/docs/openapi.yaml
@@ -69,7 +69,7 @@ paths:
                 password:
                   type: string
                   description: Password
-                  example: nesciunt
+                  example: excepturi
               required:
                 - email
                 - password
@@ -244,11 +244,11 @@ paths:
                 first_name:
                   type: string
                   description: Firstname
-                  example: voluptatem
+                  example: est
                 last_name:
                   type: string
                   description: Lastname
-                  example: autem
+                  example: quo
                 email:
                   type: string
                   description: 'Login e-mail'
@@ -256,12 +256,150 @@ paths:
                 password:
                   type: string
                   description: Password
-                  example: quae
+                  example: eveniet
               required:
                 - first_name
                 - last_name
                 - email
                 - password
+      security: []
+  /api/password/reset/code:
+    post:
+      summary: 'Change password'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: Success
+                  status_code: 422
+                  message: 'Validation errors.'
+                  data:
+                    code:
+                      - 'The code field is required.'
+                properties:
+                  status:
+                    type: string
+                    example: Success
+                  status_code:
+                    type: integer
+                    example: 422
+                  message:
+                    type: string
+                    example: 'Validation errors.'
+                  data:
+                    type: object
+                    example:
+                      code:
+                        - 'The code field is required.'
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: 'Login e-mail'
+                  example: login@login.sk
+                code:
+                  type: string
+                  description: 'Password reset code'
+                  example: alias
+                password:
+                  type: string
+                  description: 'New password'
+                  example: inventore
+              required:
+                - email
+                - code
+                - password
+      security: []
+  /api/password/reset:
+    post:
+      summary: 'Send forgot password code'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: Success
+                  status_code: 422
+                  message: 'Validation errors.'
+                  data:
+                    email:
+                      - 'The email field is required.'
+                properties:
+                  status:
+                    type: string
+                    example: Success
+                  status_code:
+                    type: integer
+                    example: 422
+                  message:
+                    type: string
+                    example: 'Validation errors.'
+                  data:
+                    type: object
+                    example:
+                      email:
+                        - 'The email field is required.'
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: 'Login e-mail'
+                  example: login@login.sk
+              required:
+                - email
       security: []
 tags:
   -
