# resources/lang/en/auth.php
@@ -16,6 +16,10 @@ return [
     'failed' => 'These credentials do not match our records.',
     'password' => 'The provided password is incorrect.',
     'throttle' => 'Too many login attempts. Please try again in :seconds seconds.',
-    'no_admin' => 'Only users with role admin can view administration.'
+    'no_admin' => 'Only users with role admin can view administration.',
+    'password' => [
+        'not_found' => 'E-mail not found.',
+        'not_found_code' => 'E-mail or password resed code not found.',
+    ]
 
 ];
