# resources/lang/en/emails.php
@@ -4,4 +4,5 @@ return [
     'register' => 'Registered in HCPortal.eu',
     'register_admin' => 'New user in HCPortal.eu',
     'user_activated' => 'Your accout was activated in HCPortal.eu',
-]
+    'reset_code' => 'Reset password code'
+];
